Fix dependency conflicts in requirements.txt
- Removed version constraints for solana, anthropic, openai, groq, ollama
- Allow pip to resolve httpx version conflicts automatically
- Keep stable versions for core packages (pandas, numpy, etc.)

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,14 @@ numpy==1.26.2
 termcolor==2.4.0
 backtesting==0.6.5
 ccxt==4.1.63
-solana==0.32.0
+solana
 solders==0.20.0
 web3==6.11.0
-anthropic==0.7.8
-openai==1.3.8
-groq==0.4.1
+anthropic
+openai
+groq
 google-generativeai==0.3.2
-ollama==0.1.8
+ollama
 ta==0.10.2
 scipy==1.11.4
 scikit-learn==1.3.2
