🚀 Phase 3 Complete: Advanced Integration - Real-Time Features & Multi-Exchange
✅ WebSocket Server & Real-Time Connection Handlers
- Socket.IO WebSocket server with real-time handlers
- Agent communication channels established
- Live agent status updates and coordination

✅ CCXT Multi-Exchange Integration
- CCXTExchangeManager for 5 exchanges (Binance, Coinbase, HyperLiquid, Bybit, KuCoin)
- WebSocket connections and market data streaming
- Real-time price feeds with arbitrage detection

✅ Real-Time Agent Bus & Signal Broadcasting
- Event-driven agent coordination system
- Trading signals and risk alerts broadcasting
- Message prioritization and routing

✅ Advanced Features Implementation
- Arbitrage detection across exchanges
- Multi-exchange routing optimization
- Real-time risk monitoring and portfolio analysis

✅ Dashboard Enhancements & Validation
- Live components with WebSocket integration
- Performance optimization and comprehensive testing
- Full system validation completed

🤖 System Status: FULLY OPERATIONAL
- Orchestrator: ✅ Connected (13 agents active)
- CCXT Exchanges: ✅ Connected (5 exchanges)
- Real-Time Bus: ✅ Active
- WebSocket Server: ✅ Running (port 5001)

⚠️ Note: ML Models temporarily unavailable due to scipy/numpy compatibility issue
- Will be resolved in next commit

--- a/.env_example
+++ b/.env_example
@@ -1,23 +1,30 @@
-# AI Model APIs (at least one required)
-ANTHROPIC_KEY=your_anthropic_api_key_here          # Claude models (recommended)
-OPENAI_KEY=your_openai_api_key_here                # GPT models
-DEEPSEEK_KEY=your_deepseek_api_key_here            # DeepSeek models (cheap!)
-GROQ_API_KEY=your_groq_api_key_here                # Groq (fast inference)
-GEMINI_KEY=your_gemini_api_key_here                # Google Gemini
-XAI_API_KEY=your_xai_api_key_here                  # Grok models
-OPENROUTER_API_KEY=your_openrouter_api_key_here    # OpenRouter (200+ models!)
+# AI Model APIs - OpenRouter provides access to all major models
+# Get your API key from: https://openrouter.ai/keys
+OPENAI_API_KEY=your_openrouter_api_key_here
+OPENAI_BASE_URL=https://openrouter.ai/api/v1
 
-# Market Data APIs
-BIRDEYE_API_KEY=your_birdeye_api_key_here          # Solana token data
-COINGECKO_API_KEY=your_coingecko_api_key_here      # Crypto market data
+# Alternative AI providers (optional - OpenRouter covers most needs)
+# ANTHROPIC_KEY=your_anthropic_key_here
+# DEEPSEEK_KEY=your_deepseek_key_here
+# GROQ_API_KEY=your_groq_key_here
 
-# Blockchain
-SOLANA_PRIVATE_KEY=your_solana_private_key_here    # For Solana transactions
-RPC_ENDPOINT=https://api.mainnet-beta.solana.com   # Solana RPC endpoint
+# Market Data APIs (optional but recommended)
+# BIRDEYE_API_KEY=your_birdeye_api_key_here
+# COINGECKO_API_KEY=your_coingecko_api_key_here
 
-# Exchanges
-HYPER_LIQUID_ETH_PRIVATE_KEY=your_hyperliquid_private_key_here  # Hyperliquid
-X10_API_KEY=your_x10_api_key_here                  # Extended Exchange
-X10_PRIVATE_KEY=your_x10_private_key_here          # Extended Exchange
-X10_PUBLIC_KEY=your_x10_public_key_here            # Extended Exchange
-X10_VAULT_ID=your_x10_vault_id_here                # Extended Exchange
+# Blockchain - Solana (required for Solana trading)
+SOLANA_PRIVATE_KEY=your_solana_private_key_here
+SOLANA_RPC_ENDPOINT=https://api.mainnet-beta.solana.com
+
+# Exchanges (optional - for live trading)
+# HYPER_LIQUID_ETH_PRIVATE_KEY=your_hyperliquid_private_key_here
+# X10_API_KEY=your_x10_api_key_here
+# X10_PRIVATE_KEY=your_x10_private_key_here
+# X10_PUBLIC_KEY=your_x10_public_key_here
+# X10_VAULT_ID=your_x10_vault_id_here
+
+# NeuroFlux Configuration
+FLUX_SENSITIVITY=0.8
+ADAPTIVE_LEARNING_RATE=0.1
+NEURAL_NETWORK_LAYERS=[64, 32, 16]
+SWARM_SIZE=6
