--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,56 @@
+# Core Dependencies
 python-dotenv==1.0.0
 requests==2.31.0
 pandas==2.1.4
 numpy==1.26.2
 termcolor==2.4.0
+
+# Trading & Backtesting
 backtesting==0.6.5
 ccxt==4.1.63
+ta==0.10.2
+
+# Blockchain
 solana
 solders==0.20.0
 web3==6.11.0
-anthropic
-openai
-groq
-google-generativeai==0.3.2
-ollama
-ta==0.10.2
+
+# AI Models - OpenRouter provides access to all major models
+openai  # For OpenRouter compatibility
+
+# Data Science & ML
 scipy==1.11.4
 scikit-learn==1.3.2
-tensorflow==2.15.0
-torch==2.1.1
-transformers==4.36.2
+statsmodels==0.14.0
+
+# Optional ML frameworks (with graceful fallbacks)
+# tensorflow==2.15.0  # Uncomment if needed for advanced ML
+# torch==2.1.1       # Uncomment if needed for PyTorch models
+# transformers==4.36.2  # Uncomment if needed for NLP
+
+# Web Framework & API
+flask==3.1.2
+flask-cors==6.0.1
+flask-socketio==5.5.1
+werkzeug==3.1.3
+itsdangerous==2.2.0
+jinja2==3.1.6
+markupsafe==3.0.3
+blinker==1.9.0
+
+# WebSocket & Async
+python-socketio==5.14.3
+python-engineio==4.12.3
+bidict==0.23.1
+simple-websocket==1.1.0
+wsproto==1.3.1
+h11==0.16.0
+
+# Production Server
+gunicorn==23.0.0
+packaging==25.0
+
+# Additional Utilities
+websockets==10.4
+psutil==6.0.0
+aiohttp==3.10.0
