--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ openai  # For OpenRouter compatibility
 scipy==1.11.4
 scikit-learn==1.3.2
 statsmodels==0.14.0
+numpy==1.26.2
 
 # Optional ML frameworks (with graceful fallbacks)
 # tensorflow==2.15.0  # Uncomment if needed for advanced ML
