--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,14 @@
-# Core Dependencies
+# ===========================================
+# NeuroFlux Requirements
+# ===========================================
+
+# Core Dependencies (Always Required)
 python-dotenv==1.0.0
 requests==2.31.0
-pandas==2.1.4
 numpy==1.26.2
 termcolor==2.4.0
 
-# Trading & Backtesting
-backtesting==0.6.5
-ccxt==4.1.63
-ta==0.10.2
-
-# Blockchain
-solana
-solders==0.20.0
-web3==6.11.0
-
-# AI Models - OpenRouter provides access to all major models
-openai  # For OpenRouter compatibility
-
-# Data Science & ML
-scipy==1.11.4
-scikit-learn==1.3.2
-statsmodels==0.14.0
-numpy==1.26.2
-
-# Optional ML frameworks (with graceful fallbacks)
-# tensorflow==2.15.0  # Uncomment if needed for advanced ML
-# torch==2.1.1       # Uncomment if needed for PyTorch models
-# transformers==4.36.2  # Uncomment if needed for NLP
-
-# Web Framework & API
+# Web Framework & API (Essential for Dashboard)
 flask==3.1.2
 flask-cors==6.0.1
 flask-socketio==5.5.1
@@ -39,19 +18,51 @@ jinja2==3.1.6
 markupsafe==3.0.3
 blinker==1.9.0
 
-# WebSocket & Async
+# WebSocket & Async (Essential for Real-time)
 python-socketio==5.14.3
 python-engineio==4.12.3
 bidict==0.23.1
 simple-websocket==1.1.0
 wsproto==1.3.1
 h11==0.16.0
+websockets==10.4
 
-# Production Server
+# Trading & Backtesting (Core Trading)
+pandas>=2.2.0
+ccxt>=4.3.0
+ta==0.10.2
+backtesting==0.6.5
+
+# Blockchain Integration
+solana
+solders==0.20.0
+web3==6.11.0
+hyperliquid>=0.4.0  # Official HyperLiquid SDK
+
+# AI Models (LLM Providers - Uncomment as needed)
+# openai  # For OpenAI GPT models
+# anthropic  # For Claude
+# google-generativeai  # For Gemini
+# groq  # For Groq
+# ollama  # For local models
+
+# Data Science & ML (Optional - with graceful fallbacks)
+scipy==1.11.4
+scikit-learn==1.3.2
+statsmodels==0.14.0
+
+# Advanced ML (Optional - heavy dependencies)
+# tensorflow==2.15.0  # Uncomment for neural networks
+# torch==2.1.1       # Uncomment for PyTorch
+# transformers==4.36.2  # Uncomment for NLP
+
+# Production & Utilities
 gunicorn==23.0.0
 packaging==25.0
-
-# Additional Utilities
-websockets==10.4
 psutil==6.0.0
 aiohttp==3.10.0
+
+# Development Tools (Optional)
+# black==25.11.0      # Code formatting
+# flake8==7.3.0       # Linting
+# freezegun==1.5.1    # Time mocking for tests
