fix: Resolve exchange API errors and event loop issues
- Add Coinbase API key support to config system
- Implement EventLoopManager to prevent 'event loop closed' errors
- Update CCXTExchangeManager to handle credential requirements
- Replace all asyncio.new_event_loop() patterns with global manager
- Add Coinbase API key placeholders to environment files
- Fix async operation lifecycle management

Resolves:
- 'coinbase requires apiKey credential' error
- 'Event loop is closed' async errors
- Inconsistent event loop management across API endpoints

--- a/.env.production
+++ b/.env.production
@@ -38,6 +38,11 @@ SOLANA_PRIVATE_KEY=your_solana_private_key_here
 SOLANA_RPC_ENDPOINT=https://api.mainnet-beta.solana.com
 
 # Exchange APIs (for live trading - configure as needed)
+# Coinbase API Keys (required for public data access)
+COINBASE_API_KEY=your_production_coinbase_key
+COINBASE_API_SECRET=your_production_coinbase_secret
+
+# Other exchanges
 # BINANCE_API_KEY=your_binance_api_key
 # BINANCE_API_SECRET=your_binance_api_secret
 # HYPER_LIQUID_ETH_PRIVATE_KEY=your_hyperliquid_private_key_here
