--- a/.env.development
+++ b/.env.development
@@ -17,6 +17,11 @@ SOLANA_PRIVATE_KEY=your_solana_private_key_here
 SOLANA_RPC_ENDPOINT=https://api.mainnet-beta.solana.com
 
 # Exchanges (optional - for live trading)
+# Coinbase API Keys (required for public data access)
+# COINBASE_API_KEY=your_coinbase_api_key_here
+# COINBASE_API_SECRET=your_coinbase_api_secret_here
+
+# Other exchanges
 # HYPER_LIQUID_ETH_PRIVATE_KEY=your_hyperliquid_private_key_here
 # X10_API_KEY=your_x10_api_key_here
 # X10_PRIVATE_KEY=your_x10_private_key_here
