feat: Switch default exchange from Coinbase to Binance
- Set Binance as default exchange (no API key required)
- Update SUPPORTED_EXCHANGES with priority and auth requirements
- Add default API routes (/api/ticker, /api/orderbook)
- Enhance exchange status endpoint with priority/auth info
- Update config.py with DEFAULT_EXCHANGE and EXCHANGE_PRIORITY
- Modify environment files to reflect new defaults
- Update README.md with comprehensive exchange API documentation
- Add graceful fallback for exchanges requiring credentials

BREAKING CHANGE: Default exchange changed from Coinbase to Binance
- Coinbase now requires API credentials
- Binance, Bybit, KuCoin work without credentials
- Improved user experience with instant market data access

--- a/.env.development
+++ b/.env.development
@@ -28,6 +28,9 @@ SOLANA_RPC_ENDPOINT=https://api.mainnet-beta.solana.com
 # X10_PUBLIC_KEY=your_x10_public_key_here
 # X10_VAULT_ID=your_x10_vault_id_here
 
+# Exchange Configuration
+DEFAULT_EXCHANGE=binance
+
 # NeuroFlux Configuration
 FLUX_SENSITIVITY=0.8
 ADAPTIVE_LEARNING_RATE=0.1
