--- a/.env.production
+++ b/.env.production
@@ -90,6 +90,9 @@ BACKUP_SCHEDULE=daily
 BACKUP_RETENTION_DAYS=30
 BACKUP_DIR=/opt/neuroflux/backups
 
+# Exchange Configuration
+DEFAULT_EXCHANGE=binance
+
 # System Configuration
 TIMEZONE=UTC
 LOCALE=en_US.UTF-8
