feat: Complete NeuroFlux next steps implementation
- 🐛 Fix failing tests in agent registry (start/stop, performance tracking)
- 🔒 Security hardening (input validation, security headers, rate limiting config)
- ⚡ Performance monitoring (config additions, memory/CPU thresholds)
- 🔄 Code refactoring (main.py agent iteration methods, dictionary-based dispatch)
- 🚀 CI/CD pipeline (automated testing, linting, deployment script)
- 📊 Enhanced error handling and logging throughout codebase
- 🧹 Code cleanup and optimization

All high-priority improvements from review completed. System ready for production deployment with enhanced reliability and security.

--- a/dashboard/public/manifest.json
+++ b/dashboard/public/manifest.json
@@ -1,25 +1,49 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "NeuroFlux Trading Dashboard",
+  "short_name": "NeuroFlux",
+  "description": "Real-time AI trading dashboard with advanced analytics",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#2c3e50",
+  "theme_color": "#3498db",
+  "orientation": "portrait-primary",
+  "categories": ["finance", "productivity", "business"],
+  "lang": "en-US",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
       "src": "logo192.png",
+      "sizes": "192x192",
       "type": "image/png",
-      "sizes": "192x192"
+      "purpose": "any maskable"
     },
     {
       "src": "logo512.png",
+      "sizes": "512x512",
       "type": "image/png",
-      "sizes": "512x512"
+      "purpose": "any maskable"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "shortcuts": [
+    {
+      "name": "Agent Control",
+      "short_name": "Agents",
+      "description": "Control and monitor trading agents",
+      "url": "/?view=agents",
+      "icons": [{ "src": "logo192.png", "sizes": "192x192" }]
+    },
+    {
+      "name": "Market Data",
+      "short_name": "Markets",
+      "description": "View live market data and prices",
+      "url": "/?view=markets",
+      "icons": [{ "src": "logo192.png", "sizes": "192x192" }]
+    },
+    {
+      "name": "Analytics",
+      "short_name": "Analytics",
+      "description": "View performance charts and predictions",
+      "url": "/?view=analytics",
+      "icons": [{ "src": "logo192.png", "sizes": "192x192" }]
+    }
+  ]
 }
